--- a/Blockbuster.API/appsettings.Development.json
+++ b/Blockbuster.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=BlockbusterDb;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
